# pyreview

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  config.yaml  docker-compose.yml  project-tasks.md  pyproject.toml
.claude/commands/: beam.md  check.md  element1d.md  fbd.md  frames.md  homework.md  parametric.md  plot.md  run.md  solve.md  vectors.md
docker/: Dockerfile
lib/: __init__.py  beams.py  elements.py  equilibrium.py  plotting.py
notebooks/: week1_python_refresher.ipynb  week2_vector_calculus.ipynb  week3_1d_elements.ipynb  week4_plotting.ipynb  week5_beams_frames.ipynb  week6_parametric_studies.ipynb
src/pyreview/: __init__.py  __main__.py
src/pyreview/agents/: architecture.py  base.py  engineering.py  orchestrator.py  performance.py  security.py  style.py
src/pyreview/agents/prompts/: architecture.md  engineering.md  orchestrator.md  performance.md  security.md  style.md
src/pyreview/cli/: app.py  display.py
src/pyreview/core/: config.py  constants.py  exceptions.py  schemas.py
src/pyreview/ingest/: diff_parser.py  file_loader.py  github_client.py
src/pyreview/output/: diff_generator.py  github_publisher.py  report_json.py  report_markdown.py
src/pyreview/storage/: repository.py  sqlite_store.py
src/pyreview/web/: app.py
tests/: conftest.py
tests/fixtures/: sample_code.py  sample_diff.patch
tests/test_agents/: test_base.py  test_orchestrator.py
tests/test_cli/: test_review_command.py
tests/test_ingest/: test_diff_parser.py  test_file_loader.py
tests/test_output/: test_diff_generator.py  test_report_json.py  test_report_markdown.py
tests/test_web/: test_api_routes.py
(+13 files in other folders)
