[project]
name = "python-school"
version = "0.1.0"
description = "Python for Civil Engineering — course workspace"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "sympy>=1.12",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
